--- a/FashionStore/index.html
+++ b/FashionStore/index.html
@@ -73,6 +73,36 @@
                 </tr>
             </tbody>
         </table>
+        <div class="information-section">
+            <div class="information">
+                <h2></h2>
+
+
+                <p>
+                </p>
+
+
+                <h3></h3>
+                <p></p>
+
+                <p>:</p>
+                <ul>
+                    <li> </li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+
+
+                <h3></h3>
+                <br>
+                <p>
+                </p>
+            </div>
+        </div>
+        <div class="footer">
+            <h1>Thank you</h1>
+        </div>
 
     </div>
 
